Updated the details of Bank transfer

--- a/src/assets/files/Privacy Policy.html
+++ b/src/assets/files/Privacy Policy.html
@@ -6,16 +6,7 @@
 <style>
 <!--
  /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Montserrat;
-	panose-1:0 0 5 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:"Helvetica Neue";}
-@font-face
-	{font-family:Poppins;}
+
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin:0in;
@@ -95,8 +86,7 @@ p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxS
  @page WordSection1
 	{size:8.5in 11.0in;
 	margin:.8in 56.85pt 84.95pt 56.85pt;}
-div.WordSection1
-	{page:WordSection1;}
+
  /* List Definitions */
  ol
 	{margin-bottom:0in;}
@@ -220,7 +210,7 @@ color:black'>Information about other individuals, such as your family members,
 friends;</span></p>
 
 <p class=MsoListParagraph style='margin-left:0in;text-indent:35.45pt;
-line-height:normal;text-autospace:none'><b><span lang=EN-GB style='font-size:
+line-height:normal;'><b><span lang=EN-GB style='font-size:
 10.5pt;font-family:Montserrat;color:black'>(f)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></b><span lang=EN-GB style='font-size:10.5pt;font-family:Montserrat;
 color:black'>Information about your IP address, information about your visit,
@@ -402,7 +392,7 @@ style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&
 </span></span></b><span lang=EN-GB style='font-size:10.5pt;font-family:Montserrat;
 color:black'>to understand and measure the effectiveness of how we serve you
 and others. to make suggestions and recommendations to you about services that
-may interest you, which may be based on your activity on our or our partner’s websites.</span></p>
+may interest you, which may be based on your activity on our or our partnerï¿½s websites.</span></p>
 
 <p class=MsoNormal style='margin-top:.2in;margin-right:0in;margin-bottom:.2in;
 margin-left:0in;text-align:justify;text-indent:.5in;line-height:normal'><span
@@ -777,7 +767,7 @@ margin-left:0in;text-align:justify;text-indent:.5in;line-height:normal'><span
 lang=EN style='font-size:10.5pt;font-family:Montserrat;color:black'>When you
 use our Website, we may store Cookies on your computer in order to facilitate
 and customize your use of our Services. Cookies are small text files that are
-placed on your computer’s hard drive by your web browser when you visit any
+placed on your computerï¿½s hard drive by your web browser when you visit any
 website. They allow information gathered on one web page to be stored until it
 is needed for use on another, allowing the Website to provide you with a
 personalized experience and the website owner with statistics about how you use
@@ -797,7 +787,7 @@ margin-left:0in;text-align:justify;text-indent:.5in;line-height:normal'><span
 lang=EN style='font-size:10.5pt;font-family:Montserrat;color:black'>When you
 visit our Website, we ask you whether you wish us to use Cookies; you are
 always free to decline our Cookies if your browser permits, but such disabling
-may hinder your ability to use some of the Website’s features. If you choose
+may hinder your ability to use some of the Websiteï¿½s features. If you choose
 not to accept them, or you prevent their use through your browser settings, we
 shall not use them for your visit except to record that you have not consented
 to their use for any other purpose. </span></p>
@@ -864,7 +854,7 @@ color:black'>PRIVACY OF CHILDREN</span></b></h1>
 margin-left:0in;text-align:justify;text-indent:.5in;line-height:normal'><span
 lang=EN-GB style='font-size:10.5pt;font-family:Montserrat;color:black'>We are
 concerned to protect the privacy of children aged 16 or under. If you are aged
-16 or under‚ please get your parent/guardian’s permission beforehand whenever
+16 or underï¿½ please get your parent/guardianï¿½s permission beforehand whenever
 you provide us with personal information.</span></p>
 
 <p class=MsoNormal style='margin-top:.2in;margin-right:0in;margin-bottom:.2in;
@@ -935,7 +925,7 @@ color:black'>DATA BREACH</span></b></h1>
 margin-left:0in;text-align:justify;text-indent:.5in;line-height:normal'><span
 lang=EN style='font-size:10.5pt;font-family:Montserrat;color:black'>In the
 event we become aware that the security of the Website, and Services has been compromised
-or users’ Personal Data has been disclosed to unrelated third party(ies) as a
+or usersï¿½ Personal Data has been disclosed to unrelated third party(ies) as a
 result of external activity, including, but not limited to, security attacks or
 fraud, we reserve the right to take reasonably appropriate measures, including,
 but not limited to, investigation and reporting, as well as notification to and
